--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,7 @@
 ====================================*/
 body {
   background: var(--DM-Body-Background);
-  overflow:overlay;
+  overflow-x:overlay;
   
   /*CSS colour variables*/
   --DM-Header-Background: #3d3d3d;
@@ -29,7 +29,8 @@ body {
 
 /*Define the content area*/
 .content-sec {
-  width: 100%;
+  max-height: calc(100vh - 22vh);
+  overflow-y: scroll;
  }
 
 /*====================================
@@ -37,22 +38,22 @@ Scroll bar
 ====================================*/
 
 /* width */
-::-webkit-scrollbar {
+.content-sec > ::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+.content-sec > ::-webkit-scrollbar-track {
   background: none; 
 }
  
 /* Handle */
-::-webkit-scrollbar-thumb {
+.content-sec > ::-webkit-scrollbar-thumb {
   background: var(--Site-Darker-Red); 
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+.content-sec > ::-webkit-scrollbar-thumb:hover {
   background: var(--Site-Default-Red); 
 }
 
@@ -65,7 +66,6 @@ Main Content
 .main-flex {
   width: 100%;
   flex-direction: column;
-  margin-bottom: 5em;
   justify-content: center;
 }
 
